--- a/style/sim-types.css
+++ b/style/sim-types.css
@@ -393,3 +393,25 @@
 	background: linear-gradient(to bottom,  hsl(310,41%,77%),  hsl(310,41%,83%));
 	border-color: hsl(310,41%,41%);
 }
+
+.movemenu button.type-Nuclear {
+	/* bg: 97 to 90, border: 70 */
+	background: hsl(92,67%,93%);
+	background: linear-gradient(to bottom,  hsl(92,67%,97%),  hsl(92,67%,84%));
+	border-color: hsl(92,67%,70%);
+}
+.movemenu button.type-Nuclear small {
+	color: hsl(92,67%,41%);
+}
+.movemenu button.type-Nuclear:hover {
+	/* bg: 95 to 83, border: 41 */
+	background: hsl(92,67%,87%);
+	background: linear-gradient(to bottom,  hsl(92,67%,94%),  hsl(92,67%,77%));
+	border-color: hsl(92,67%,41%);
+}
+.movemenu button.type-Nuclear:active, .movemenu button.type-Nuclear.pressed {
+	/* bg: 83 to 88, border: 41 */
+	background: hsl(92,67%,77%);
+	background: linear-gradient(to bottom,  hsl(92,67%,77%),  hsl(92,67%,83%));
+	border-color: hsl(92,67%,41%);
+}
