--- a/style/client2.css
+++ b/style/client2.css
@@ -1981,7 +1981,7 @@ a.ilink.yours {
 .avatarlist button {
 	width: 80px;
 	height: 80px;
-	background: transparent url(https://play.pokemonshowdown.com/sprites/trainers-sheet.png) no-repeat scroll 0px 0px;
+	background: transparent url(https://raw.githubusercontent.com/eriedaberrie/showdown-sprites/main/play.pokemonshowdown.com/sprites/trainers-sheet.png) no-repeat scroll 0px 0px;
 }
 .bglist button span {
 	display: block;
