--- a/style/battle.css
+++ b/style/battle.css
@@ -343,7 +343,7 @@ License: GPLv2
 	height: 90px;
 	opacity: .8;
 	margin: 0 auto;
-	background: transparent none no-repeat scroll center top;
+	background: transparent none no-repeat scroll center bottom;
 }
 .trainer div.teamicons {
 	width: 100px;
@@ -364,6 +364,18 @@ License: GPLv2
 .trainersprite {
 	max-width: 80px;
 	max-height: 80px;
+}
+.trainersprite.nuclearhorde {
+	width: 105px;
+	height: 90px;
+	max-width: 105px;
+	max-height: 90px;
+}
+.trainersprite.surfingninjas {
+	width: 120px;
+	height: 90px;
+	max-width: 120px;
+	max-height: 90px;
 }
 .turn {
 	position: absolute;
